--- a/browser/components/loop/content/css/contacts.css
+++ b/browser/components/loop/content/css/contacts.css
@@ -7,6 +7,59 @@ html {
   font-family: sans-serif; 
 }
 
+.contacts-container {
+  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  overflow: auto;
+}
+
+.contact-list-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.contact-list ~ .contacts-gravatar-promo {
+  display: none;
+}
+
+.contact-list-wrapper {
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
+.contacts-gravatar-promo ~ .contact-list-empty {
+  background-image: none;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 2px;
+}
+
+.contact-list-empty-container {
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.contact-list-empty,
+.contact-search-list-empty {
+  margin-top: 4rem;
+  padding-top: 11.5rem;
+  padding-bottom: 0;
+}
+
+.contact-search-list-empty {
+  background-image: url("../shared/img/empty_search.svg");
+}
+
+.contact-list-empty {
+  background-image: url("../shared/img/empty_contacts.svg");
+}
+
 .contact-import-spinner {
   display: none;
 }
@@ -35,8 +88,6 @@ html {
   background-repeat: no-repeat;
   color: #999;
   font-size: 1.2rem;
-  flex: 2 1 auto;
-  align-self: stretch;
 }
 
 html[dir="rtl"] .contact-filter {
@@ -65,21 +116,17 @@ html[dir="rtl"] .contact-filter {
 }
 
 .contact-list {
-  overflow-x: hidden;
-  overflow-y: auto;
   
 
-  height: 306px;
   
   margin-top: 4px;
 }
 
 .contact-list-title {
-  padding: 0 1rem;
+  padding: 0.75rem 1rem;
   color: #666;
   font-weight: 500;
   font-size: .9em;
-  margin-top: 1rem;
 }
 
 .contact,
@@ -210,23 +257,6 @@ html[dir="rtl"] .contact-filter {
   width: 100%;
 }
 
-.contact-list-empty,
-.contact-search-list-empty {
-  background-image: url("../shared/img/empty_contacts.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: 128px;
-  margin-top: 4rem;
-  padding-top: 12rem;
-  padding-bottom: 5rem;
-  text-align: center;
-  color: #4a4a4a;
-}
-
-.contact-search-list-empty {
-  background-image: url("../shared/img/empty_search.svg");
-}
-
 .panel-text-medium,
 .panel-text-large {
   margin: 3px;
@@ -340,7 +370,10 @@ html[dir="rtl"] .contact > .dropdown-menu {
 }
 
 .contact-form {
-  padding: 14px; 
+  padding: 14px 15px 0 15px; 
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -352,9 +385,8 @@ html[dir="rtl"] .contact > .dropdown-menu {
 }
 
 .contact-form .form-content-container {
-  height: 24.1rem; 
-
-
+  
+  flex: 1;
   padding-top: 4px; 
 
 
@@ -435,7 +467,9 @@ html[dir="rtl"] .contacts-gravatar-arrow {
 }
 
 .contact-controls {
-  padding: 0 16px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-top: 1px solid #D8D8D8;
 }
 
 .contact-controls > .button {
