--- a/browser/components/loop/content/css/panel.css
+++ b/browser/components/loop/content/css/panel.css
@@ -17,11 +17,23 @@ body {
   overflow: hidden;
   font: menu;
   background-color: #fbfbfb;
+  height: 410px;
+  width: 330px;
+}
+
+
+.panel-content {
+  height: 410px;
+  width: 330px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
 }
 
 
 
 .panel .messages {
+  width: 100%;
   margin: 0;
 }
 
@@ -67,10 +79,15 @@ body {
 
 
 .tab-view-container {
+  width: 100%;
   background-image: url("../shared/img/beta-ribbon.svg#beta-ribbon");
   background-color: #fbfbfb;
   background-size: 36px 36px;
   background-repeat: no-repeat;
+  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  overflow: hidden;
 }
 
 .tab-view {
@@ -179,7 +196,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
   background-image: url("../shared/img/icons-14x14.svg#hello-hover");
 }
 
-.tab-view li:first-child:nth-last-child(2) ~ div {
+.tab-view li:first-child:nth-last-child(2) ~ li {
+  
   display: none;
 }
 
@@ -190,10 +208,13 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 
 .tab {
   display: none;
+  flex: 1;
+  overflow: auto;
 }
 
 .tab.selected {
-  display: block;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 
@@ -254,29 +275,25 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 
 
 .contact-list-empty,
-.room-list-empty {
-  background-image: url("../shared/img/empty_contacts.svg");
+.contact-search-list-empty,
+.no-conversations-message {
   background-repeat: no-repeat;
   background-position: top center;
-  padding-top: 19%;
-  padding-bottom: 3%;
   text-align: center;
   color: #4a4a4a;
   font-weight: lighter;
 }
 
 
-.contacts-gravatar-promo ~ .contact-list-empty {
-  background-image: none;
-  padding-top: 3%;
-}
 
-.contact-list-empty {
-  padding-top: 27%;
-}
+.no-conversations-message {
+  
 
-.room-list-empty {
-  margin: 5% 15px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-top: 75px;
+  padding-bottom: 10px;
   background-image: url("../shared/img/empty_conversations.svg");
 }
 
@@ -296,6 +313,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 .room-list-loading {
   margin: 5rem 15px;
   text-align: center;
+  
+  flex: 1;
 }
 
 .room-list-loading > img {
@@ -305,9 +324,9 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 
 
 .rooms {
-  min-height: 100px;
-  
-  position: relative;
+  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .rooms > h1 {
@@ -323,6 +342,7 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 .new-room-view {
   display: flex;
   flex-direction: column;
+  border-top: 1px solid #d8d8d8;
 }
 
 .new-room-view > .context-checkbox-checked {
@@ -332,8 +352,8 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 .new-room-view > .context {
   border-top: 1px solid #ebebeb;
   flex: 1;
-  margin: .5rem 0;
-  padding: .5rem 15px 1rem;
+  border-radius: 3px 3px 0 0;
+  padding: 6px 15px 8px;
 }
 
 .new-room-view > .context > .context-enabled {
@@ -370,7 +390,7 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
   height: 3rem;
   display: block;
   font-size: 1.2rem;
-  margin: 0 15px 1rem 15px;
+  margin: 7px 15px 0 15px;
   padding: .5rem 1rem;
   border-radius: 4px;
 }
@@ -382,14 +402,23 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 }
 
 .room-list {
-  max-height: 335px; 
   
-  min-height: 100px;
-  overflow: auto;
+
+
+  flex: 1 1 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
-.room-list:empty {
+.room-list-empty {
   border-bottom-width: 0;
+  flex: 1;
+  
+
+
+  transform-style: preserve-3d;
 }
 
 .room-list > .room-entry {
@@ -406,6 +435,7 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
   
 
   width: calc(100% - 1rem - 56px);
+
 }
 
 .room-list > .room-entry.room-active > h2 {
@@ -437,7 +467,7 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
 @keyframes drop-and-fade-in {
   0%   {opacity: 0; top: -15px;}
   25%  {opacity: 0; top: -15px;}
-  100% {opacity: 1; top: 0px;}
+  100% {opacity: 1; top: 0;}
 }
 
 .room-list > .room-entry > h2 > button {
@@ -475,7 +505,7 @@ html[dir="rtl"] .tab-view li:nth-child(2).selected ~ .slide-bar {
   background: transparent url(../shared/img/icons-16x16.svg#checkmark);
   animation: pulse .150s;
   animation-timing-function: ease-in-out;
-  top: 0px;
+  top: 0;
 }
 
 
@@ -551,11 +581,11 @@ html[dir="rtl"] .room-entry-call-btn {
 
 html[dir="rtl"] .room-entry-context-actions > .dropdown-menu {
   right: auto;
-  left: 21px;
+  left: 45px;
 }
 
 .room-entry-context-actions > .dropdown-menu {
-  right: 21px;
+  right: 45px;
   bottom: auto;
   left: auto;
 }
@@ -980,9 +1010,10 @@ html[dir="rtl"] .settings-menu .dropdown-menu {
   align-content: stretch;
   align-items: center;
   font-size: 1rem;
-  background-color: #fbfbfb;
   color: #666666;
-  padding: .5rem 15px;
+  padding: 10px 15px 6px 15px;
+  width: 100%;
+  height: 42px;
 }
 
 .footer .signin-details {
@@ -999,14 +1030,14 @@ html[dir="rtl"] .settings-menu .dropdown-menu {
 
 
 .fte-get-started-content {
+  
   flex: 1;
-  padding: 4.5rem 0 3.4rem;
+  padding: 7.5rem 0 0;
   display: flex;
   flex-direction: column;
 }
 
 .fte-title {
-  flex: 1;
   margin: 0 44px;
 }
 
@@ -1022,19 +1053,14 @@ html[dir="rtl"] .settings-menu .dropdown-menu {
 }
 
 .fte-get-started-content + .powered-by-wrapper {
-  flex: 0;
+  width: 100%;
 }
 
 .fte-get-started-container {
-  height: 100%;
-  width: 100%;
-  min-height: 270px;
+  height: 410px;
+  width: 330px;
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-content: flex-start;
-  align-items: flex-start;
+  flex-flow: column nowrap;
   background: #fbfbfb;
 }
 
