--- a/browser/themes/shared/devtools/animationinspector.css
+++ b/browser/themes/shared/devtools/animationinspector.css
@@ -289,14 +289,25 @@ body {
   top: 0;
   
   transform: translate(-1px, -1px);
-  height: 100%;
+  box-sizing: border-box;
+  height: calc(100% + 2px);
+
+  border: 1px solid var(--timelime-border-color);
+  border-width: 1px 0 1px 1px;
   background-image: repeating-linear-gradient(45deg,
                                               transparent,
                                               transparent 1px,
                                               var(--theme-selection-color) 1px,
                                               var(--theme-selection-color) 4px);
   background-color: var(--timelime-border-color);
-  border: 1px solid var(--timelime-border-color);
+}
+
+.animation-timeline .animation .delay.negative {
+  
+
+
+
+  border-width: 1px;
 }
 
 
