--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -264,6 +264,11 @@ checkbox:-moz-focusring {
   height: 16px;
   margin: 0 3px;
   transition: opacity 0.05s ease-in-out;
+
+  
+  color: #0b0b0b;
+  direction: ltr;
+  font-size: 11px;
 }
 
 .devtools-button:empty::before {
