--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -132,7 +132,7 @@
 
 
 
-*|*::-moz-anonymous-block, *|*::-moz-cell-content {
+*|*::-moz-cell-content {
   display: block !important;
   position: static !important;
   unicode-bidi: inherit;
@@ -140,8 +140,10 @@
   overflow-clip-box: inherit;
 }
 
-*|*::-moz-anonymous-block, *|*::-moz-anonymous-positioned-block {
+*|*::-moz-block-inside-inline-wrapper {
+  display: block !important;
   
+  position: inherit; 
   outline: inherit;
   outline-offset: inherit;
   clip-path: inherit;
@@ -151,6 +153,16 @@
   text-decoration: inherit;
   -moz-box-ordinal-group: inherit !important;
   overflow-clip-box: inherit;
+  unicode-bidi: inherit;
+  text-overflow: inherit;
+  
+
+
+  top: inherit;
+  left: inherit;
+  bottom: inherit;
+  right: inherit;
+  z-index: inherit;
 }
 
 *|*::-moz-xul-anonymous-block {
@@ -266,20 +278,6 @@
 
 *|*::-moz-pagebreak {
   display: block !important;
-}
-
-*|*::-moz-anonymous-positioned-block {
-  display: block !important;
-  position: inherit; 
-  top: inherit;
-  left: inherit;
-  bottom: inherit;
-  right: inherit;
-  z-index: inherit;
-  clip: inherit;
-  opacity: inherit;
-  unicode-bidi: inherit;
-  text-overflow: inherit;
 }
 
 
