--- a/servo/resources/servo.css
+++ b/servo/resources/servo.css
@@ -168,6 +168,12 @@ svg > * {
   display: none;
 }
 
+
+*|*::-servo-text {
+    margin: 0;
+}
+
+
 *|*::-servo-input-text {
     margin: 0;
 }
@@ -215,3 +221,18 @@ svg > * {
     height: auto;
 }
 
+
+*|*::-servo-inline-block-wrapper {
+    position: static;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+*|*::-servo-inline-absolute {
+    clip: auto;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
