--- a/devtools/client/netmonitor/src/assets/styles/netmonitor.css
+++ b/devtools/client/netmonitor/src/assets/styles/netmonitor.css
@@ -71,8 +71,11 @@ body,
   flex: auto;
 }
 
-.devtools-toolbar-container {
+.devtools-toolbar {
   display: flex;
+}
+
+.devtools-toolbar-container {
   justify-content: space-between;
 }
 
@@ -94,17 +97,46 @@ body,
 
 
 
+.status-bar-label {
+  display: inline-flex;
+  align-content: stretch;
+  margin-inline-end: 10px;
+}
+
+.status-bar-label::before {
+  content: "";
+  display: inline-block;
+  margin-inline-end: 10px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  width: 1px;
+  background: var(--theme-splitter-color);
+}
+
+.status-bar-label.dom-content-loaded {
+  color: blue;
+}
+
+.status-bar-label.load {
+  color: red;
+}
+
+
+
 .request-list-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .request-list-empty-notice {
   margin: 0;
   padding: 12px;
   font-size: 120%;
+  flex: 1;
+  overflow: auto;
 }
 
 .notice-perf-message {
@@ -149,6 +181,7 @@ body,
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: auto;
+  flex: 1;
   --timings-scale: 1;
   --timings-rev-scale: 1;
 }
