--- a/devtools/client/themes/toolbars.css
+++ b/devtools/client/themes/toolbars.css
@@ -39,7 +39,7 @@
 
 .devtools-toolbar,
 .devtools-sidebar-tabs tabs {
-  -moz-appearance: none; appearance: none;
+  -moz-appearance: none;
   padding: 0;
   border-width: 0;
   border-bottom-width: 1px;
@@ -72,6 +72,11 @@
 .devtools-toolbar checkbox .checkbox-label-box .checkbox-label {
   margin: 0 6px !important; 
   padding: 0;
+}
+
+.devtools-toolbar-bottom {
+  border-top-width: 1px;
+  border-bottom: none;
 }
 
 .devtools-separator {
