--- a/browser/components/ion/content/ion.html
+++ b/browser/components/ion/content/ion.html
@@ -1,15 +1,16 @@
-
-
-
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src chrome: blob:; img-src https:; object-src 'none'">
+    <meta name="color-scheme" content="light dark">
     <link rel="localization" href="browser/branding/brandings.ftl">
     <link rel="localization" href="branding/brand.ftl">
-    
+    <!-- Temporary "en-US"-only l10n strings -->
     <link rel="localization" href="preview/ion.ftl">
     <link rel="stylesheet" href="chrome://global/skin/in-content/common.css">
     <link rel="stylesheet" href="chrome://browser/content/ion.css">
